<resources>
    <string name="app_name">Find Solution</string>
    <string name="field_req">Field required</string>
    <string name="login">Log In</string>
    <string name="code">Code</string>
    <string name="user_phone">Phone number</string>
    <string name="resend">Resend in</string>
    <string name="resend2">Resend</string>
    <string name="inv_code">Invalid Code</string>
    <string name="failed">Failed</string>
    <string name="wait">Wait</string>
    <string name="verfication_code">Verfication Code</string>
    <string name="please_enter_verfication_code">Please Enter Verfication Code</string>
    <string name="confirm">Confirm</string>
    <string name="skip">Skip</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="user_found">Phone Found</string>
    <string name="server_error">Server Error</string>
    <string name="upload_image">Upload Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallary</string>
    <string name="cancel">Cancel</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="no_department_tos_show">No Department Tos Show</string>
    <string name="department">Department</string>
    <string name="something">Check internet connection</string>
    <string name="no_data_show">No Data Show</string>
    <string name="personal_info">Personal Info</string>
    <string name="work">Work :</string>
    <string name="additional_detials">Additional Detials :</string>
    <string name="location">Location</string>
    <string name="open">open</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="contactus">ContactUs</string>
    <string name="aboutus">AboutUs</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>
    <string name="email">Email</string>

    <string name="social_media">Social Media</string>
    <string name="suc">Success</string>
    <string name="not_avail_now">Not Avaliable Now</string>
    <string name="link_inc">This link is incorrect</string>
    <string name="inv_email">Invalid Email</string>
    <string name="send">Send</string>
    <string name="next">Next</string>
    <string name="advisor">Advisor</string>
    <string name="user">User</string>
    <string name="user_type">User Type</string>
    <string name="choose_user_type">Choose User Type</string>
    <string name="advisor_offers_service">Advisor Offers service</string>
    <string name="client_show_service">Client Show Service</string>
    <string name="complete_registeration_info">Complete Registeration Info</string>
    <string name="choose_category">Choose Category</string>
    <string name="contact_number">contact number</string>
    <string name="whats_number">Whats Number</string>
    <string name="choose_subcategory">Choose Sub Category</string>
    <string name="work_title">Work Title</string>
    <string name="additional_detials_chooser">Additional Detials (Chooser)</string>
    <string name="subscribe">Subscribe</string>
    <string name="my_package">Packge</string>
    <string name="month">Month</string>
    <string name="pakeges">Pakeges</string>
    <string name="ryal">ryal</string>
    <string name="back">Back</string>
    <string name="day">Day</string>
    <string name="remaining">Remaining</string>
    <string name="logout">Logout</string>
    <string name="search2">Search</string>
    <string name="please_sign_in_or_sign_up">Please sign In or Sign Up</string>
    <string name="whats_app">Wahts App</string>
    <string name="phone_call">Phone Call</string>
    <string name="update_profile">Update Profile</string>
    <string name="user_exist">User Exist</string>

</resources>