<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity_choose_user.ChooseUserActivity"
        android:background="@color/gray0"
        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_120sdp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".05"
            android:transitionName="logo"
            tools:ignore="UnusedAttribute" />


        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias=".1"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/cardclient"
                android:layout_width="120dp"
                android:layout_height="130dp"
                app:cardElevation="3dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"
                android:layout_margin="5dp"


                >
                <FrameLayout
                    android:id="@+id/flclient"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:longClickable="false"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_gravity="center"
                        >
                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/target"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:text="@string/user"
                            />
                    </LinearLayout>

                </FrameLayout>
            </androidx.cardview.widget.CardView>
            <Space
                android:layout_width="20dp"
                android:layout_height="0dp"/>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardAdvisor"
                android:layout_width="120dp"
                android:layout_height="130dp"
                app:cardElevation="3dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"
                android:layout_margin="5dp"

                >
                <FrameLayout
                    android:id="@+id/flAdvisor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:longClickable="false"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_gravity="center"
                        >
                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/advisor"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:text="@string/advisor"
                            />
                    </LinearLayout>
                </FrameLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <TextView
            android:id="@+id/tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias=".1"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/choose_user_type"
            />
        <TextView
            android:id="@+id/tv1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias=".1"
            android:textSize="14sp"
            android:textColor="@color/gray8"
            android:gravity="center"
            android:text="@string/advisor_offers_service"
            />
        <TextView
            android:id="@+id/tv2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias=".1"
            android:textSize="14sp"
            android:textColor="@color/gray8"
            android:gravity="center"
            android:text="@string/client_show_service"
            />
        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv2"
            app:layout_constraintBottom_toBottomOf="parent"
            android:minWidth="120dp"
            android:background="@drawable/btn_change_lang"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/next"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
