<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="model"
            type="com.semicode.findsolution.models.SinglePakcgesModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_165sdp"
    android:layout_margin="@dimen/_8sdp"
    android:padding="@dimen/_5sdp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_110sdp"
        android:background="@color/soft_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/imageView4"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:background="@drawable/background_subscriptio"
        android:backgroundTint="@color/soft_gray"
        android:elevation="@dimen/_40sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"

            >

            <TextView
                android:id="@+id/item_rv_Sub_tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text='@{model.price+""}'
                android:textColor="@color/yellow"
                android:textSize="@dimen/_30sdp" />

            <TextView
                android:id="@+id/item_rv_Sub_tv_Currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ryal"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text"


                />
        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/btsubscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/subscribe"
        app:cornerRadius="@dimen/_5sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cons"
        android:layout_marginBottom="@dimen/_8sdp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"

        app:layout_constraintBottom_toTopOf="@+id/btsubscribe"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/my_package"
            android:textSize="@dimen/medium_text"
         app:layout_constraintEnd_toStartOf="@+id/month_title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/month_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text='@{model.number_of_months+""}'
            android:textColor="@color/black"
            android:textSize="@dimen/_30sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView7"
            app:layout_constraintEnd_toStartOf="@+id/tv"
            />

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month"
            android:textSize="@dimen/medium_text"
            app:layout_constraintBottom_toBottomOf="@+id/month_title"
            app:layout_constraintStart_toEndOf="@+id/month_title"
            app:layout_constraintTop_toTopOf="@+id/month_title"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>