<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable
            name="contactModel"
            type="com.semicode.findsolution.models.ContactUsModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:fillViewport="true"

     >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="16dp"
              android:orientation="vertical"
              >
              <com.google.android.material.textfield.TextInputLayout
                  style="@style/out_line_et"
                  android:layout_width="match_parent"
                  android:layout_height="@dimen/_50sdp"
                  android:hint="@string/contact_number"

                  >

                  <com.google.android.material.textfield.TextInputEditText
                      android:id="@+id/edtname"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:singleLine="true"
                      android:textColorHint="@color/gray4"
                      android:textColor="@color/black"
                      android:textSize="13sp"
                      android:paddingLeft="8dp"
                      android:paddingRight="8dp"
                      android:text="@={contactModel.name}"
                      error="@{contactModel.error_name}"

                      />




              </com.google.android.material.textfield.TextInputLayout>

              <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
                  android:layout_marginTop="@dimen/_8sdp"
                  >


             <com.google.android.material.textfield.TextInputLayout
                style="@style/out_line_et"
                android:layout_width="0dp"
                android:layout_height="@dimen/_50sdp"
                 android:hint="@string/email"
                 android:layout_marginEnd="@dimen/_3sdp"
                 android:layout_marginStart="@dimen/_3sdp"
                 android:layout_weight="1"
                >

                <com.google.android.material.textfield.TextInputEditText
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_marginTop="5dp"
                  android:paddingStart="20dp"
                  android:paddingEnd="20dp"
                  android:textColor="@color/black"
                  android:textSize="14sp"
                  android:singleLine="true"
                  android:inputType="textEmailAddress"

                  android:text="@={contactModel.email}"
                  error="@{contactModel.error_email}"
                  />
             </com.google.android.material.textfield.TextInputLayout>

              <com.google.android.material.textfield.TextInputLayout
                style="@style/out_line_et"
                android:layout_width="0dp"
                android:layout_height="@dimen/_50sdp"
                  android:hint="@string/subject"
                  android:layout_marginEnd="@dimen/_3sdp"
                  android:layout_marginStart="@dimen/_3sdp"
                  android:layout_weight="1"
                >

                <com.google.android.material.textfield.TextInputEditText
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_marginTop="5dp"
                  android:paddingStart="20dp"
                  android:paddingEnd="20dp"
                  android:textColor="@color/black"
                  android:textSize="14sp"
                  android:singleLine="true"

                  android:text="@={contactModel.subject}"
                  error="@{contactModel.error_subject}"
                  />
              </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
              <com.google.android.material.textfield.TextInputLayout
                  style="@style/out_line_et"
                  android:layout_width="match_parent"
                  android:layout_height="@dimen/_180sdp"
                  android:layout_marginEnd="@dimen/_3sdp"
                  android:layout_marginStart="@dimen/_3sdp"
                  android:hint="@string/message"

                  >

              <com.google.android.material.textfield.TextInputEditText
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_marginTop="5dp"
                  android:padding="20dp"
                  android:textColor="@color/black"
                  android:textSize="14sp"
                  android:singleLine="true"
                  android:gravity="top|start"
                  android:inputType="textMultiLine"
                  android:text="@={contactModel.message}"
                  error="@{contactModel.error_message}"

                  />
              </com.google.android.material.textfield.TextInputLayout>
              <Button
                  android:id="@+id/btnSend"
                  android:layout_width="150dp"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
                  android:layout_marginTop="10dp"
                  android:background="@drawable/btn_change_lang"
                  android:textColor="@color/white"
                  android:textSize="15sp"
                  android:text="@string/send"

                  />
              <TextView
                  android:id="@+id/tv"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
                  android:layout_marginTop="40dp"
                  android:textColor="@color/black"
                  android:textSize="18sp"
                  android:text="@string/social_media"
                  />
              <LinearLayout
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
                  android:layout_marginTop="20dp"
                  android:layout_marginStart="30dp"
                  android:layout_marginEnd="30dp"
                  >
                  <ImageView
                      android:id="@+id/facebook"
                      android:layout_width="40dp"
                      android:layout_height="40dp"
                      android:src="@drawable/facebook"
                      />
                  <Space
                      android:layout_width="20dp"
                      android:layout_height="0dp"/>
                  <ImageView
                      android:id="@+id/google"
                      android:layout_width="40dp"
                      android:layout_height="40dp"
                      android:src="@drawable/google_plus"
                      />
                  <Space
                      android:layout_width="20dp"
                      android:layout_height="0dp"/>
                  <ImageView
                      android:id="@+id/instgram"
                      android:layout_width="40dp"
                      android:layout_height="40dp"
                      android:src="@drawable/instagram"
                      />
                  <Space
                      android:layout_width="20dp"
                      android:layout_height="0dp"/>
                  <ImageView
                      android:id="@+id/twitter"
                      android:layout_width="40dp"
                      android:layout_height="40dp"
                      android:src="@drawable/twitter"
                      />
                  <Space
                      android:layout_width="20dp"
                      android:layout_height="0dp"/>
              </LinearLayout>
          </LinearLayout>

      </LinearLayout>
    </ScrollView>

</layout>