<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="model"
            type="com.semicode.findsolution.models.LoginModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity_login.LoginActivity"
        android:background="@color/white"
        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_120sdp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".05"
            android:transitionName="logo"

           />
        <androidx.cardview.widget.CardView
            android:id="@+id/cardlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintBottom_toTopOf="@+id/imagbottom"
            app:cardCornerRadius="@dimen/_10sdp"
            >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    >


        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias=".02"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:lines="1"
            android:text="@string/login"

            />
        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/ic_line"
            app:layout_constraintStart_toStartOf="@id/tv1"
            app:layout_constraintEnd_toEndOf="@+id/tv1"
            app:layout_constraintTop_toBottomOf="@id/tv1"


            />


        <LinearLayout
            android:id="@+id/llLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias=".15"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="25dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="@dimen/_8sdp"
                app:contentPadding="@dimen/_3sdp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                 android:padding="@dimen/_3sdp"
                    >
                    <ImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:src="@drawable/ic_saudi_arabia"

                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_12sdp"
                        android:text="+20"
                        />
                    <View
                        android:layout_width="1dp"
                        android:background="@color/gray9"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/_3sdp"
                        android:layout_marginStart="@dimen/_3sdp"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:layout_marginBottom="@dimen/_3sdp"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:singleLine="true"
                        android:textSize="@dimen/_12sdp"
                        android:ellipsize="end"
                        android:inputType="number"
                        android:textColor="@color/black"
                        android:hint="@string/user_phone"
                        android:textColorHint="@color/gray4"
                        android:background="@color/transparent"
                        android:text="@={model.phone}"
                        error="@{model.error_phone}"
                        />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="150dp"
                android:background="@drawable/btn_change_lang"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:text="@string/login"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:id="@+id/tvskip"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:background="@color/transparent"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/skip"

                />
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/imagbottom"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0"
            android:src="@drawable/img_login"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
